--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -46,6 +46,24 @@ nav a:hover {
   color: #e94560;
 }
 
+/* Стили для всех ссылок */
+a {
+  color: hsl(249, 100%, 49%); /* Цвет ссылок по умолчанию */
+  text-decoration: none; /* Убирает подчеркивание */
+}
+
+a:hover {
+  color: #e94560; /* Цвет при наведении */
+}
+
+a:visited {
+  color: #b0b0b0; /* Цвет посещенных ссылок (опционально) */
+}
+
+a:active {
+  color: #ff6b81; /* Цвет активной ссылки (опционально) */
+}
+
 /* Карточки для постов журнала */
 .post {
   background-color: #16213e;
